--- a/RockWeb/Styles/style-v2/components/_forms.scss
+++ b/RockWeb/Styles/style-v2/components/_forms.scss
@@ -125,7 +125,7 @@ output {
   background-image:   none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border:             1px solid var(--color-interface-soft);
   border-radius:      var(--rounded-xsmall); // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-  box-shadow:         inset 0 1px 1px rgba(0, 0, 0, .075);
+  // box-shadow:         inset 0 1px 1px rgba(0, 0, 0, .075); // Comment out because in rock the textbox have a box-shadow: none.
   transition:         border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 
   // Customize the `:focus` state to imitate native WebKit styles.
