- Fix vertical navbar bottom right corner not square when expanded.

--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -715,6 +715,7 @@ $navbar-element-height: 40px;
 
     .nav-open & {
       z-index: 2000;
+      border-radius: 0 0 0 12px;
     }
 
     .navbar-side:first-child {
