--- a/RockWeb/Styles/style-v2/components/_panels.scss
+++ b/RockWeb/Styles/style-v2/components/_panels.scss
@@ -29,10 +29,17 @@
   margin-bottom:      var(--spacing-large);
   background-color:   var(--color-interface-softest);
   border:             1px solid transparent;
-  border-radius:      4px; // Need to hard code because the inner content was leaking out.
-  box-shadow:         0 1px 1px rgba(0, 0, 0, .05);
-}
+  border-radius:      var(--rounded-medium);
+  overflow:           clip;     // Have to set to clip because the inside content was leaking out of the corner of the border radius.
+  box-shadow:         var(--box-shadow);
 
+  .panel-title {
+    i {
+      margin-right: var(--spacing-tiny);
+      color: var(--color-interface-soft);
+    }
+  }
+}
 
 // PANEL BODY
 .panel-body {
