--- a/RockWeb/Styles/style-v2/components/_tables.scss
+++ b/RockWeb/Styles/style-v2/components/_tables.scss
@@ -738,8 +738,8 @@ tr.row-highlight {
   .grid-filter-entry,
   .grid-filter-overview fieldset {
     padding:        var(--spacing-medium);
-    padding-top:    37px;   // TODO this is harded coded 
-    border-bottom:  1px solid var(--color-interface-softer); // TODO darken softer by 10%
+    padding-top:    37px;   // TODO this is hard coded 
+    border-bottom:  1px solid var(--color-interface-soft); // TODO darken softer by 10%
   }
 
   .picker .picker-label {
