--- a/RockWeb/Styles/style-v2/components/_buttons.scss
+++ b/RockWeb/Styles/style-v2/components/_buttons.scss
@@ -807,7 +807,7 @@
   padding:        var(--spacing-tiny) var(--spacing-xsmall);
   font-size:      var(--font-size-xsmall);
   line-height:    16px;
-  border-radius:  var(--rounded-small);
+  border-radius:  var(--rounded-xsmall);
 }
 // ======================== END BUTTON SIZE ========================
 
