--- a/RockWeb/Styles/style-v2/rock-components/_modal.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_modal.scss
@@ -23,7 +23,7 @@ body.rock-modal {
 .rock-modal .modal-content {
   background:         transparent;
   border:             0;
-  box-shadow:         0 12px 24px 0 rgba(0,0,0,.1);
+  box-shadow:         var(--popup-box-shadow);
 
   .modal-header {
     min-height:       34px;
