- Updated default learning hub image

--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -14,6 +14,7 @@
         2.2.3 Acknowledgement
         2.2.4 File Upload
         2.2.5 Video Watch
+    3. Course Detail (internal)
 */
 
 
@@ -722,3 +723,11 @@
       margin-top: var(--spacing-large);
       margin-bottom: var(--spacing-large);
     }
+
+
+// 3. Course Detail (internal)
+// -------------------------
+.course-detail-content {
+    // Ensure there's enough height to push the Edit button below the billboard/image.
+    min-height: 240px;
+}
