- Keeping Sass up to date with less.

--- a/RockWeb/Styles/style-v2/components/_forms.scss
+++ b/RockWeb/Styles/style-v2/components/_forms.scss
@@ -177,8 +177,10 @@ output {
     margin-right: var(--spacing-medium);
     align-items:  center;
   }
+  
   > .row,
-  > .form-row {
+  > .form-row,
+  > .form-group {
     width:        100%;
   }
 
